--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@fortawesome/pro-thin-svg-icons": "^6.0.0-beta3",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "next": "latest",
-    "next-auth": "^3.29.0",
+    "next-auth": "^4.0.0-beta.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
