--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/pro-solid-svg-icons": "^6.0.0-beta3",
     "@fortawesome/pro-thin-svg-icons": "^6.0.0-beta3",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "lodash": "^4.17.21",
     "next": "latest",
     "next-auth": "^4.0.2",
     "react": "^17.0.2",
